/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "UpdateDimensionMapCommandMessage";

import "core/CommandDto.proto";

message Mapping {
    required sint32 id = 2;
    oneof value {
        sint32 intValue = 3;
        sint64 longValue = 4;
        bool booleanValue = 5;
        string stringValue = 6;
        sint32 nullValue = 7;
    }
}

message Dimension {
    required string name = 1;
    repeated Mapping mapping = 2;
}

message DataSource {
    required string name = 1;
    repeated Dimension dimension = 2;
}

message UpdateDimensionMapCommandDto {
    repeated DataSource dataSource = 1;
}

extend CommandDto {
    optional UpdateDimensionMapCommandDto updateDimensionMapCommand = 303;
}